{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 43,
  "lineage": "d6cc7590-de49-7bd5-7df3-2a85d3e375ff",
  "resources": [
    {
      "module": "module.BE1-Apache",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a929b66ed6e0de6",
            "arn": "arn:aws:ec2:us-east-1:296589370313:instance/i-07f8098885e18e529",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f8098885e18e529",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8518edca8b312b5",
            "private_dns": "ip-10-0-1-170.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-066fd5259f5e38242",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081cb6aa55bb25010",
            "tags": {
              "Name": "BE-Apache"
            },
            "tags_all": {
              "Name": "BE-Apache"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0699157156eaf6848"
            ]
          },
          "dependencies": [
            "module.BE1-Apache.data.aws_ami.amzn-linux-2023-ami",
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Sec-Group.aws_security_group.Sec_Group",
            "module.Subnet-2.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.BE1-Apache",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "EC2-Target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/Internal-Target-Group/7d2fd3227c81d411-20250413024522503000000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/Internal-Target-Group/7d2fd3227c81d411",
            "target_id": "i-07f8098885e18e529"
          },
          "dependencies": [
            "module.BE1-Apache.aws_instance.Ec2",
            "module.BE1-Apache.data.aws_ami.amzn-linux-2023-ami",
            "module.LoadBalancer-Internal.aws_lb_target_group.Target-Group",
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Sec-Group.aws_security_group.Sec_Group",
            "module.Subnet-2.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.BE2-Apache",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a929b66ed6e0de6",
            "arn": "arn:aws:ec2:us-east-1:296589370313:instance/i-09c62113282739ce2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c62113282739ce2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-073156ff7a46d5980",
            "private_dns": "ip-10-0-3-183.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09e9725df8ef2d8de",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cb3df1167007084",
            "tags": {
              "Name": "BE-Apache2"
            },
            "tags_all": {
              "Name": "BE-Apache2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0699157156eaf6848"
            ]
          },
          "dependencies": [
            "module.BE2-Apache.data.aws_ami.amzn-linux-2023-ami",
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Sec-Group.aws_security_group.Sec_Group",
            "module.Subnet-4.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.BE2-Apache",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "EC2-Target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/Internal-Target-Group/7d2fd3227c81d411-20250413024522682300000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/Internal-Target-Group/7d2fd3227c81d411",
            "target_id": "i-09c62113282739ce2"
          },
          "dependencies": [
            "module.BE2-Apache.aws_instance.Ec2",
            "module.BE2-Apache.data.aws_ami.amzn-linux-2023-ami",
            "module.LoadBalancer-Internal.aws_lb_target_group.Target-Group",
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Sec-Group.aws_security_group.Sec_Group",
            "module.Subnet-4.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer-External",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Load-Balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:loadbalancer/app/External-LB/49648368125549bc",
            "arn_suffix": "app/External-LB/49648368125549bc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "External-LB-1257828434.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:296589370313:loadbalancer/app/External-LB/49648368125549bc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "External-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0699157156eaf6848"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0124969e1b2b45983"
              },
              {
                "subnet_id": "subnet-081cb6aa55bb25010"
              }
            ],
            "subnets": [
              "subnet-0124969e1b2b45983",
              "subnet-081cb6aa55bb25010"
            ],
            "vpc_id": "vpc-08d9713240a5ef91f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Sec-Group.aws_security_group.Sec_Group",
            "module.Subnet-1.aws_subnet.project_subnet",
            "module.Subnet-2.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer-External",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:listener/app/External-LB/49648368125549bc/74956074328f72c3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/External-Target-Group/a54aedaa2b8bc17a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:296589370313:listener/app/External-LB/49648368125549bc/74956074328f72c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:loadbalancer/app/External-LB/49648368125549bc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.LoadBalancer-External.aws_lb.Load-Balancer",
            "module.LoadBalancer-External.aws_lb_target_group.Target-Group",
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Sec-Group.aws_security_group.Sec_Group",
            "module.Subnet-1.aws_subnet.project_subnet",
            "module.Subnet-2.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer-External",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Target-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/External-Target-Group/a54aedaa2b8bc17a",
            "arn_suffix": "targetgroup/External-Target-Group/a54aedaa2b8bc17a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/External-Target-Group/a54aedaa2b8bc17a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "External-Target-Group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08d9713240a5ef91f"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer-Internal",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Load-Balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:loadbalancer/app/Internal-LB/8d475ff5531b58e0",
            "arn_suffix": "app/Internal-LB/8d475ff5531b58e0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-Internal-LB-1999969769.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:296589370313:loadbalancer/app/Internal-LB/8d475ff5531b58e0",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Internal-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0699157156eaf6848"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00cb3df1167007084"
              },
              {
                "subnet_id": "subnet-0a07dfc773454491d"
              }
            ],
            "subnets": [
              "subnet-00cb3df1167007084",
              "subnet-0a07dfc773454491d"
            ],
            "vpc_id": "vpc-08d9713240a5ef91f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Sec-Group.aws_security_group.Sec_Group",
            "module.Subnet-3.aws_subnet.project_subnet",
            "module.Subnet-4.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer-Internal",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:listener/app/Internal-LB/8d475ff5531b58e0/656cc5f51a831001",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/Internal-Target-Group/7d2fd3227c81d411",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:296589370313:listener/app/Internal-LB/8d475ff5531b58e0/656cc5f51a831001",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:loadbalancer/app/Internal-LB/8d475ff5531b58e0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.LoadBalancer-Internal.aws_lb.Load-Balancer",
            "module.LoadBalancer-Internal.aws_lb_target_group.Target-Group",
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Sec-Group.aws_security_group.Sec_Group",
            "module.Subnet-3.aws_subnet.project_subnet",
            "module.Subnet-4.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer-Internal",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Target-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/Internal-Target-Group/7d2fd3227c81d411",
            "arn_suffix": "targetgroup/Internal-Target-Group/7d2fd3227c81d411",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/Internal-Target-Group/7d2fd3227c81d411",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Internal-Target-Group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08d9713240a5ef91f"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Main_VPC-IGW",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:internet-gateway/igw-037534e7de7932d8a",
            "id": "igw-037534e7de7932d8a",
            "owner_id": "296589370313",
            "tags": {
              "Name": "project-IGW"
            },
            "tags_all": {
              "Name": "project-IGW"
            },
            "vpc_id": "vpc-08d9713240a5ef91f"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Main_VPC-IGW",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:vpc/vpc-08d9713240a5ef91f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08f0110d986fbd7ea",
            "default_route_table_id": "rtb-03992656fbf01c7bf",
            "default_security_group_id": "sg-0124f2b671178b3ee",
            "dhcp_options_id": "dopt-0406b99a93271d51a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d9713240a5ef91f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03992656fbf01c7bf",
            "owner_id": "296589370313",
            "tags": {
              "Name": "Main_VPC"
            },
            "tags_all": {
              "Name": "Main_VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.NAT-1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e001f48e3c38941f",
            "arn": "arn:aws:ec2:us-east-1:296589370313:elastic-ip/eipalloc-0e001f48e3c38941f",
            "association_id": "eipassoc-0a1deb0929cf2539c",
            "domain": "vpc",
            "id": "eipalloc-0e001f48e3c38941f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-084565340d50071ac",
            "private_dns": "ip-10-0-0-67.ec2.internal",
            "private_ip": "10.0.0.67",
            "public_dns": "ec2-13-219-128-26.compute-1.amazonaws.com",
            "public_ip": "13.219.128.26",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP1"
            },
            "tags_all": {
              "Name": "EIP1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.NAT-1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e001f48e3c38941f",
            "association_id": "eipassoc-0a1deb0929cf2539c",
            "connectivity_type": "public",
            "id": "nat-030d3018496638ff1",
            "network_interface_id": "eni-084565340d50071ac",
            "private_ip": "10.0.0.67",
            "public_ip": "13.219.128.26",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0124969e1b2b45983",
            "tags": {
              "Name": "NAT-1"
            },
            "tags_all": {
              "Name": "NAT-1"
            }
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.NAT-1.aws_eip.NAT-EIP",
            "module.Subnet-1.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.NAT-2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcf830b08c71b7a4",
            "arn": "arn:aws:ec2:us-east-1:296589370313:elastic-ip/eipalloc-0bcf830b08c71b7a4",
            "association_id": "eipassoc-03fbc8fdd7cbbfc6d",
            "domain": "vpc",
            "id": "eipalloc-0bcf830b08c71b7a4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ecde2d93aba9f6ee",
            "private_dns": "ip-10-0-2-253.ec2.internal",
            "private_ip": "10.0.2.253",
            "public_dns": "ec2-54-159-204-86.compute-1.amazonaws.com",
            "public_ip": "54.159.204.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP2"
            },
            "tags_all": {
              "Name": "EIP2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.NAT-2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcf830b08c71b7a4",
            "association_id": "eipassoc-03fbc8fdd7cbbfc6d",
            "connectivity_type": "public",
            "id": "nat-0bde8037f5364e922",
            "network_interface_id": "eni-0ecde2d93aba9f6ee",
            "private_ip": "10.0.2.253",
            "public_ip": "54.159.204.86",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a07dfc773454491d",
            "tags": {
              "Name": "NAT-2"
            },
            "tags_all": {
              "Name": "NAT-2"
            }
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.NAT-2.aws_eip.NAT-EIP",
            "module.Subnet-3.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Nginx",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a929b66ed6e0de6",
            "arn": "arn:aws:ec2:us-east-1:296589370313:instance/i-0012e54f139ed4382",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0012e54f139ed4382",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2d50676747e8354",
            "private_dns": "ip-10-0-0-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.199",
            "public_ip": "44.202.50.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01384e0a82bcc3cd1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0124969e1b2b45983",
            "tags": {
              "Name": "Nginx-Proxy"
            },
            "tags_all": {
              "Name": "Nginx-Proxy"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0699157156eaf6848"
            ]
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Nginx.data.aws_ami.amzn-linux-2023-ami",
            "module.Sec-Group.aws_security_group.Sec_Group",
            "module.Subnet-1.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Nginx",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "EC2-Target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/External-Target-Group/a54aedaa2b8bc17a-2025041302452916080000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/External-Target-Group/a54aedaa2b8bc17a",
            "target_id": "i-0012e54f139ed4382"
          },
          "dependencies": [
            "module.LoadBalancer-External.aws_lb_target_group.Target-Group",
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Nginx.aws_instance.Ec2",
            "module.Nginx.data.aws_ami.amzn-linux-2023-ami",
            "module.Sec-Group.aws_security_group.Sec_Group",
            "module.Subnet-1.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Nginx2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a929b66ed6e0de6",
            "arn": "arn:aws:ec2:us-east-1:296589370313:instance/i-088ab8f2dc7f01d80",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088ab8f2dc7f01d80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05a856e730b392145",
            "private_dns": "ip-10-0-2-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.104",
            "public_ip": "3.83.117.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bd23b950cce16f41",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a07dfc773454491d",
            "tags": {
              "Name": "Nginx2-Proxy"
            },
            "tags_all": {
              "Name": "Nginx2-Proxy"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0699157156eaf6848"
            ]
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Nginx2.data.aws_ami.amzn-linux-2023-ami",
            "module.Sec-Group.aws_security_group.Sec_Group",
            "module.Subnet-3.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Nginx2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "EC2-Target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/External-Target-Group/a54aedaa2b8bc17a-2025041302452978160000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:296589370313:targetgroup/External-Target-Group/a54aedaa2b8bc17a",
            "target_id": "i-088ab8f2dc7f01d80"
          },
          "dependencies": [
            "module.LoadBalancer-External.aws_lb_target_group.Target-Group",
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Nginx2.aws_instance.Ec2",
            "module.Nginx2.data.aws_ami.amzn-linux-2023-ami",
            "module.Sec-Group.aws_security_group.Sec_Group",
            "module.Subnet-3.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Private-RT-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:route-table/rtb-04f8c7818331093a5",
            "id": "rtb-04f8c7818331093a5",
            "owner_id": "296589370313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-030d3018496638ff1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT-1"
            },
            "tags_all": {
              "Name": "Private-RT-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d9713240a5ef91f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.NAT-1.aws_eip.NAT-EIP",
            "module.NAT-1.aws_nat_gateway.NAT_Gateway",
            "module.Subnet-1.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Private-RT-2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:route-table/rtb-03f43e40c8e3a5013",
            "id": "rtb-03f43e40c8e3a5013",
            "owner_id": "296589370313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bde8037f5364e922",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT-2"
            },
            "tags_all": {
              "Name": "Private-RT-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d9713240a5ef91f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.NAT-2.aws_eip.NAT-EIP",
            "module.NAT-2.aws_nat_gateway.NAT_Gateway",
            "module.Subnet-3.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Public-RT",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:route-table/rtb-07cf98223e92bf678",
            "id": "rtb-07cf98223e92bf678",
            "owner_id": "296589370313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037534e7de7932d8a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d9713240a5ef91f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Main_VPC-IGW.aws_internet_gateway.project_IGW",
            "module.Main_VPC-IGW.aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Sec-Group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Sec_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:security-group/sg-0699157156eaf6848",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0699157156eaf6848",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP-SSH",
            "name_prefix": "",
            "owner_id": "296589370313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HTTP-SSH"
            },
            "tags_all": {
              "Name": "HTTP-SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d9713240a5ef91f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Sec-Group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:security-group-rule/sgr-06dbbbb91ed7c4f58",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06dbbbb91ed7c4f58",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0699157156eaf6848",
            "security_group_rule_id": "sgr-06dbbbb91ed7c4f58",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Sec-Group.aws_security_group.Sec_Group"
          ]
        }
      ]
    },
    {
      "module": "module.Sec-Group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:security-group-rule/sgr-0296c81cfe83f7704",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0296c81cfe83f7704",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0699157156eaf6848",
            "security_group_rule_id": "sgr-0296c81cfe83f7704",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Sec-Group.aws_security_group.Sec_Group"
          ]
        }
      ]
    },
    {
      "module": "module.Sec-Group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTPs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:security-group-rule/sgr-0713755ed25fb489e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0713755ed25fb489e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0699157156eaf6848",
            "security_group_rule_id": "sgr-0713755ed25fb489e",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Sec-Group.aws_security_group.Sec_Group"
          ]
        }
      ]
    },
    {
      "module": "module.Sec-Group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:security-group-rule/sgr-05c89d87b008b3ef9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-05c89d87b008b3ef9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0699157156eaf6848",
            "security_group_rule_id": "sgr-05c89d87b008b3ef9",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Sec-Group.aws_security_group.Sec_Group"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Sub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f59693da32bf494",
            "route_table_id": "rtb-07cf98223e92bf678",
            "subnet_id": "subnet-0124969e1b2b45983"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_internet_gateway.project_IGW",
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Public-RT.aws_route_table.RT",
            "module.Subnet-1.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:subnet/subnet-0124969e1b2b45983",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0124969e1b2b45983",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296589370313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-08d9713240a5ef91f"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet-2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Sub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e16088addd69ff94",
            "route_table_id": "rtb-04f8c7818331093a5",
            "subnet_id": "subnet-081cb6aa55bb25010"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.NAT-1.aws_eip.NAT-EIP",
            "module.NAT-1.aws_nat_gateway.NAT_Gateway",
            "module.Private-RT-1.aws_route_table.RT",
            "module.Subnet-1.aws_subnet.project_subnet",
            "module.Subnet-2.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet-2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:subnet/subnet-081cb6aa55bb25010",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081cb6aa55bb25010",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296589370313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-08d9713240a5ef91f"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet-3",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Sub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f69089161714b9e7",
            "route_table_id": "rtb-07cf98223e92bf678",
            "subnet_id": "subnet-0a07dfc773454491d"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_internet_gateway.project_IGW",
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.Public-RT.aws_route_table.RT",
            "module.Subnet-3.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet-3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:subnet/subnet-0a07dfc773454491d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a07dfc773454491d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296589370313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-08d9713240a5ef91f"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet-4",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Sub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bff7947cb4ba2e7",
            "route_table_id": "rtb-03f43e40c8e3a5013",
            "subnet_id": "subnet-00cb3df1167007084"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC",
            "module.NAT-2.aws_eip.NAT-EIP",
            "module.NAT-2.aws_nat_gateway.NAT_Gateway",
            "module.Private-RT-2.aws_route_table.RT",
            "module.Subnet-3.aws_subnet.project_subnet",
            "module.Subnet-4.aws_subnet.project_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet-4",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296589370313:subnet/subnet-00cb3df1167007084",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cb3df1167007084",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296589370313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-08d9713240a5ef91f"
          },
          "dependencies": [
            "module.Main_VPC-IGW.aws_vpc.Main_VPC"
          ]
        }
      ]
    }
  ]
}